syntax = "proto3";
package sunrise.accounts.self_delegatable_lockup.v1;

import "cosmos_proto/cosmos.proto";
import "gogoproto/gogo.proto";

option go_package = "github.com/sunriselayer/sunrise/x/accounts/self_delegatable_lockup/v1";

// MsgInit
message MsgInit {
  string sender = 1 [(cosmos_proto.scalar) = "cosmos.AddressString"];
}

// MsgInitResponse is the response returned after base account initialization.
// This is empty.
message MsgInitResponse {}

// MsgSelfDelegate
message MsgSelfDelegate {
  string sender = 1 [(cosmos_proto.scalar) = "cosmos.AddressString"];
  // Amount of fee denom
  string amount = 2 [
    (cosmos_proto.scalar) = "cosmos.Int",
    (gogoproto.customtype) = "cosmossdk.io/math.Int",
    (gogoproto.nullable) = false
  ];
}

// MsgSelfDelegateResponse
message MsgSelfDelegateResponse {}

// MsgWithdrawSelfDelegationUnbonded
message MsgWithdrawSelfDelegationUnbonded {
  string sender = 1 [(cosmos_proto.scalar) = "cosmos.AddressString"];
  // Amount of bond denom
  string amount = 2 [
    (cosmos_proto.scalar) = "cosmos.Int",
    (gogoproto.customtype) = "cosmossdk.io/math.Int",
    (gogoproto.nullable) = false
  ];
}

// MsgWithdrawSelfDelegationUnbondedResponse
message MsgWithdrawSelfDelegationUnbondedResponse {}
